<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/kikko" android:contentDescription="@string/todo"/>

    <TextView
        android:id="@+id/TVname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_margin="5dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TVlastnmae"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TVname"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/TVname"
        android:text="@string/lntv"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TVtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignLeft="@+id/TVname"
        android:text="@string/timeTV"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TVComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="22dp"
        android:text="@string/coment"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TVComment"
        android:layout_below="@+id/TVComment"
        android:layout_toLeftOf="@+id/TVname"
        android:src="@drawable/ic_launcher"
        android:background="@null" />

    <TextView
        android:id="@+id/numberOfComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageButton1"
        android:layout_marginBottom="14dp"
        android:layout_toRightOf="@+id/imageButton1"
        android:text="@string/numberofComments"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageButton1"
        android:layout_toRightOf="@+id/TVlastnmae"
        android:background="@null"
        android:src="@drawable/like" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/numberOfComments"
        android:layout_alignBottom="@+id/numberOfComments"
        android:layout_alignRight="@+id/TVlastnmae"
        android:layout_marginTop="56dp"
        android:text="@string/numberofComments"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
